feat: adding ReaderDAO javadoc