@@ -83,7 +83,6 @@
                         --add-opens com.pbl.biblioteca/com.pbl.biblioteca.dao.BookReserve=ALL-UNNAMED
                         --add-opens com.pbl.biblioteca/com.pbl.biblioteca.dao.Librarian=ALL-UNNAMED
                         --add-opens com.pbl.biblioteca/com.pbl.biblioteca.dao.Loan=ALL-UNNAMED
-                        --add-opens com.pbl.biblioteca/com.pbl.biblioteca.dao.Operator=ALL-UNNAMED
                         --add-opens com.pbl.biblioteca/com.pbl.biblioteca.dao.User=ALL-UNNAMED
                         --add-opens com.pbl.biblioteca/com.pbl.biblioteca.model=ALL-UNNAMED
                         --add-opens com.pbl.biblioteca/com.pbl.biblioteca.dao.Report=ALL-UNNAMED
